# lgm

./: CMakeLists.txt  LICENSE  README.md  init.lua  lgm.cpp
rocks/: lgm-scm-1.rockspec
