CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
PROJECT(lgm)

ADD_DEFINITIONS(-std=c++11)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(Spuce REQUIRED)

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/TH" "${Spuce_INCLUDE_DIRS}" "${CMAKE_CURRENT_BINARY_DIR}")

LINK_DIRECTORIES("${Torch_INSTALL_LIB}" ${CMAKE_CURRENT_BINARY_DIR})

SET(src lgm.cpp)

FILE(GLOB luasrc *.lua)

ADD_LIBRARY(lgm MODULE ${src})
TARGET_LINK_LIBRARIES(lgm TH ${Spuce_LIBRARIES})

SET_TARGET_PROPERTIES(lgm PROPERTIES PREFIX "lib" IMPORT_PREFIX "lib")

INSTALL(TARGETS lgm
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(FILES ${luasrc} DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/lgm")
